--- a/src/main/resources/templates/store/detalle-factura.html
+++ b/src/main/resources/templates/store/detalle-factura.html
@@ -97,21 +97,21 @@
 									<h6>Subtotal:</h6>
 								</div>
 								<div class="col-sm-6">
-									<input type="number" class="form-control is-valid"
+									<input  class="form-control is-valid"
 										th:value="${subtotal}" disabled>
 								</div>
 								<div class="col-sm-6">
 									<h6>Decuento:</h6>
 								</div>
 								<div class="col-sm-6">
-									<input type="number" class="form-control is-valid"
+									<input  class="form-control is-valid"
 										th:value="${descuento}" disabled>
 								</div>
 								<div class="col-sm-6">
 									<h6>Total:</h6>
 								</div>
 								<div class="col-sm-6">
-									<input type="number" class="form-control is-valid"
+									<input  class="form-control is-valid"
 										th:value="${total}" disabled>
 								</div>
 							</div>
