--- a/src/main/resources/templates/layouts/public-layout.html
+++ b/src/main/resources/templates/layouts/public-layout.html
@@ -8,7 +8,7 @@
 	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <meta name="description" content="" />
 <meta name="author" content="Dany Lasso" />
-<title th:text="'Los Chinitos'"></title>
+<title th:text="'Comercializadora'"></title>
 <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
 
 <link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}" />
@@ -72,7 +72,7 @@
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-4 text-lg-left">Copyright ©
-					Comercializadora Grupo 10 - 2021</div>
+					Comercializadora Grupo 7 - 2021</div>
 				<div class="col-lg-4 my-3 my-lg-0">
 					<a class="btn btn-dark btn-social mx-2" href="#!"><i
 						class="fab fa-twitter"></i></a> <a
