change title headers

--- a/src/main/resources/templates/layouts/public-layout.html
+++ b/src/main/resources/templates/layouts/public-layout.html
@@ -42,8 +42,7 @@
 		<nav class="navbar navbar-expand-lg navbar-dark fixed-top"
 			id="mainNav">
 			<div class="container" sec:authorize="!isAuthenticated()">
-				<a class="navbar-brand js-scroll-trigger" href="#page-top">Los
-					Chinitos</a>
+				<a class="navbar-brand js-scroll-trigger" href="#page-top">Comercializadora</a>
 				<button class="navbar-toggler navbar-toggler-right" type="button"
 					data-toggle="collapse" data-target="#navbarResponsive"
 					aria-controls="navbarResponsive" aria-expanded="false"
