--- a/src/main/resources/templates/store/home.html
+++ b/src/main/resources/templates/store/home.html
@@ -8,8 +8,7 @@
 	<!-- Navigation-->
 	<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
 		<div class="container" sec:authorize="!isAuthenticated()">
-			<a class="navbar-brand js-scroll-trigger" href="#page-top">Los
-				Chinitos</a>
+			<a class="navbar-brand js-scroll-trigger" href="#page-top">Comercializadora</a>
 			<button class="navbar-toggler navbar-toggler-right" type="button"
 				data-toggle="collapse" data-target="#navbarResponsive"
 				aria-controls="navbarResponsive" aria-expanded="false"
@@ -32,8 +31,7 @@
 			</div>
 		</div>
 		<div class="container" sec:authorize="isAuthenticated()">
-			<a class="navbar-brand js-scroll-trigger" href="#page-top">Los
-				Chinitos</a>
+			<a class="navbar-brand js-scroll-trigger" href="#page-top">Comercializadora</a>
 			<button class="navbar-toggler navbar-toggler-right" type="button"
 				data-toggle="collapse" data-target="#navbarResponsive"
 				aria-controls="navbarResponsive" aria-expanded="false"
