--- a/src/main/resources/static/css/private-pages.css
+++ b/src/main/resources/static/css/private-pages.css
@@ -11,25 +11,28 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 .sidebar {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    border-color: blue;
+    border-width: 1px;
+    border-style: solid;
 }
 
 .sidebar a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 15px;
-  color: #ffffff;
-  display: block;
-  transition: 0.3s;
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 15px;
+    color: blue;
+    display: block;
+    transition: 0.3s;
 }
 
 .sidebar a:hover {
@@ -48,14 +51,14 @@
   font-size: 20px;
   cursor: pointer;
   background-color: transparent;
-  color: white;
+  color: blue;
   padding: 10px 15px;
   border: none;
 }
 
 .title-sidebar{
 	background-color: transparent;
-    color: white;
+    color: blue;
     padding-top: 10px;
 }
 
@@ -65,7 +68,10 @@
 }
 
 .openbtn:hover {
-  background-color: gray;
+  background-color: transparent;
+  border-color: blue;
+  border-style: solid;
+  border-width: 1px;
 }
 
 #main {
@@ -79,7 +85,10 @@
 }
 
 #mainNavInternet{
-	    background-color: black;
+  background-color: #fff;
+  border-width: 1px;
+  border-style: solid;
+  border-color: blue;
 }
 
 .logo-home{
