--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -66,7 +66,8 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background: rgb(0,75,230);
+  background: linear-gradient(220deg, rgba(0,75,230,0.1997253760862886) 27%, rgba(56,0,180,0.2221972861986482) 76%);
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -159,12 +160,12 @@ sup {
 }
 
 a {
-  color: #77E100;
+  color: #007bff;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #e6b301;
+  color: #6610f2;
   text-decoration: underline;
 }
 
@@ -213,7 +214,7 @@ table {
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  color: #6c757d;
+  color: #fff;
   text-align: left;
   caption-side: bottom;
 }
@@ -514,8 +515,8 @@ a > code {
 kbd {
   padding: 0.2rem 0.4rem;
   font-size: 87.5%;
-  color: #fff;
-  background-color: #212529;
+  color: #007bff;
+  background-color: #6610f2;
   border-radius: 0.2rem;
 }
 kbd kbd {
@@ -527,7 +528,7 @@ kbd kbd {
 pre {
   display: block;
   font-size: 87.5%;
-  color: #212529;
+  color: #6610f2;
 }
 pre code {
   font-size: inherit;
@@ -1655,20 +1656,21 @@ pre code {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #212529;
+  color: #0068FF;
+  background: #fff;
 }
 .table th,
 .table td {
   padding: 0.75rem;
   vertical-align: top;
-  border-top: 1px solid #dee2e6;
+  border-top: 1px solid #6610f2;
 }
 .table thead th {
   vertical-align: bottom;
-  border-bottom: 2px solid #dee2e6;
+  border-bottom: 2px solid #6610f2;
 }
 .table tbody + tbody {
-  border-top: 2px solid #dee2e6;
+  border-top: 2px solid #6610f2;
 }
 
 .table-sm th,
@@ -1677,11 +1679,11 @@ pre code {
 }
 
 .table-bordered {
-  border: 1px solid #dee2e6;
+  border: 1px solid #0068FF;
 }
 .table-bordered th,
 .table-bordered td {
-  border: 1px solid #dee2e6;
+  border: 1px solid #0068FF;
 }
 .table-bordered thead th,
 .table-bordered thead td {
@@ -1707,7 +1709,7 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #fff2c7;
+  background-color: rgba(0, 104, 255, 0.5);
 }
 .table-primary th,
 .table-primary td,
@@ -1727,7 +1729,7 @@ pre code {
 .table-secondary,
 .table-secondary > th,
 .table-secondary > td {
-  background-color: #d6d8db;
+  background-color: rgba(0, 104, 255, 0.5);
 }
 .table-secondary th,
 .table-secondary td,
@@ -1767,13 +1769,13 @@ pre code {
 .table-info,
 .table-info > th,
 .table-info > td {
-  background-color: #bee5eb;
+  background-color: rgba(0, 104, 255, 0.5);
 }
 .table-info th,
 .table-info td,
 .table-info thead th,
 .table-info tbody + tbody {
-  border-color: #86cfda;
+  border-color: rgba(0, 104, 255, 0.5);
 }
 
 .table-hover .table-info:hover {
@@ -1885,7 +1887,7 @@ pre code {
 }
 .table .thead-light th {
   color: #495057;
-  background-color: #e9ecef;
+  background-color: rgba(0, 104, 255, 0.5);
   border-color: #dee2e6;
 }
 
@@ -2437,33 +2439,33 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #77E100;
-  border-color: #77E100;
+    color: blue;
+    background-color: #fff;
+    border-color: blue;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #fec810;
-  border-color: #fec503;
+  background-color: blue;
+  border-color: blue;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #fec810;
-  border-color: #fec503;
-  box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
+  background-color: blue;
+  border-color: blue;
+  box-shadow: 0 0 0 0.2rem blue;
 }
 .btn-primary.disabled, .btn-primary:disabled {
-  color: #fff;
-  background-color: #77E100;
-  border-color: #77E100;
+  color: #000;
+  background-color: #D8D8D8;
+  border-color: #D8D8D8;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #fec503;
-  border-color: #f3bd01;
+  background-color: blue;
+  border-color: blue;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
+  box-shadow: 0 0 0 0.2rem blue;
 }
 
 .btn-secondary {
@@ -2527,25 +2529,25 @@ fieldset:disabled a.btn {
 }
 
 .btn-info {
-  color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+    color: #5D00FF;
+    background-color: #fff;
+    border-color: #5D00FF;
 }
 .btn-info:hover {
   color: #fff;
-  background-color: #138496;
-  border-color: #117a8b;
+  background-color: #5D00FF;
+  border-color: #5D00FF;
 }
 .btn-info:focus, .btn-info.focus {
   color: #fff;
-  background-color: #138496;
-  border-color: #117a8b;
-  box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+  background-color: #5D00FF;
+  border-color: #5D00FF;
+  box-shadow: 0 0 0 0.2rem #5D00FF;
 }
 .btn-info.disabled, .btn-info:disabled {
-  color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  color: #000;
+  background-color: #D8D8D8;
+  border-color: #D8D8D8;
 }
 .btn-info:not(:disabled):not(.disabled):active, .btn-info:not(:disabled):not(.disabled).active, .show > .btn-info.dropdown-toggle {
   color: #fff;
@@ -2619,12 +2621,12 @@ fieldset:disabled a.btn {
 .btn-light {
   color: #212529;
   background-color: #f8f9fa;
-  border-color: #f8f9fa;
+  border-color: #212529;
 }
 .btn-light:hover {
   color: #212529;
   background-color: #e2e6ea;
-  border-color: #dae0e5;
+  border-color: #212529;
 }
 .btn-light:focus, .btn-light.focus {
   color: #212529;
@@ -4373,10 +4375,14 @@ input[type=button].btn-block {
 }
 
 .card-header {
-  padding: 0.75rem 1.25rem;
-  margin-bottom: 0;
-  background-color: rgba(0, 0, 0, 0.03);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 0;
+    color: blue;
+    background: #E8F1FF;
+    border-color: blue;
+    border-style: solid;
+    border-width: 1px;
+    margin-top: 1re;
 }
 .card-header:first-child {
   border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
@@ -9774,7 +9780,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #77E100 !important;
+  color: blue !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -10044,10 +10050,20 @@ img::-moz-selection {
   border-radius: 100%;
 }
 
+.customNav{
+  background-color: #fff;
+  border-width: 1px;
+  border-style: solid;
+  border-color: blue;
+}
+
 #mainNav {
   padding-top: 1rem;
-  padding-bottom: 1rem;
-  background-color: #212529;
+  padding-bottom: 1rem;    
+  background-color: #fff;
+  border-width: 1px;
+  border-style: solid;
+  border-color: blue;
 }
 #mainNav .navbar-toggler {
   padding: 0.75rem;
@@ -10059,7 +10075,7 @@ img::-moz-selection {
   border: 0;
 }
 #mainNav .navbar-brand {
-  color: #77E100;
+  color: blue;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   letter-spacing: 0.0625em;
@@ -10071,18 +10087,17 @@ img::-moz-selection {
 #mainNav .navbar-nav .nav-item .nav-link {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 0.95rem;
-  color: #fff;
+  color: blue;
   letter-spacing: 0.0625em;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #77E100;
+  color: blue;
 }
 
 @media (min-width: 992px) {
   #mainNav {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-    border: none;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     transition: padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out;
   }
   #mainNav .navbar-brand {
@@ -10096,7 +10111,10 @@ img::-moz-selection {
   #mainNav.navbar-shrink {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    background-color: #212529;
+    background-color: #fff;
+  border-width: 1px;
+  border-style: solid;
+  border-color: blue;
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
