--- a/src/main/resources/templates/layouts/internt-layout.html
+++ b/src/main/resources/templates/layouts/internt-layout.html
@@ -42,7 +42,7 @@
 <body>
 
 	<header th:fragment="header">
-		<nav class="navbar navbar-expand-sm navbar-dark fixed-top"
+		<nav class="navbar navbar-expand-sm navbar-dark fixed-top customNav"
 			id="mainNavInternet">
 			<div class=" container-nav">
 
