--- a/src/main/resources/templates/layouts/public-layout.html
+++ b/src/main/resources/templates/layouts/public-layout.html
@@ -39,7 +39,7 @@
 <body>
 
 	<header th:fragment="header">
-		<nav class="navbar navbar-expand-lg navbar-dark fixed-top"
+		<nav class="navbar navbar-expand-lg navbar-dark fixed-top "
 			id="mainNav">
 			<div class="container" sec:authorize="!isAuthenticated()">
 				<a class="navbar-brand js-scroll-trigger" href="#page-top">Comercializadora</a>
@@ -55,9 +55,9 @@
 							th:href="@{/store}">Inicio</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger"
 							th:href="@{/store/products}">Productos</a></li>
-						<li class="nav-item"><a class="btn btn-light btn-sm"
+						<li class="nav-item"><a class="btn btn-primary btn-sm"
 							th:href="@{/login}">Iniciar Sesión</a></li>
-						<li class="nav-item"><a class="btn btn-light btn-sm"
+						<li class="nav-item"><a class="btn btn-primary btn-sm"
 							th:href="@{/signup}">Registrarse</a></li>
 					</ul>
 				</div>
