--- a/src/main/resources/templates/store/home.html
+++ b/src/main/resources/templates/store/home.html
@@ -23,9 +23,9 @@
 						href="#portfolio">Productos</a></li>
 					<li class="nav-item"><a class="nav-link js-scroll-trigger"
 						href="#team">Desarrolladores</a></li>
-					<li class="nav-item"><a class="btn btn-light btn-sm"
+					<li class="nav-item"><a class="btn btn-primary btn-sm"
 						th:href="@{/login}">Iniciar Sesión</a></li>
-					<li class="nav-item"><a class="btn btn-light btn-sm"
+					<li class="nav-item"><a class="btn btn-primary btn-sm"
 						th:href="@{/signup}">Registrarse</a></li>
 				</ul>
 			</div>
