--- a/src/main/resources/static/css/private-pages.css
+++ b/src/main/resources/static/css/private-pages.css
@@ -11,28 +11,25 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 .sidebar {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #fff;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-    border-color: blue;
-    border-width: 1px;
-    border-style: solid;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
 }
 
 .sidebar a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 15px;
-    color: blue;
-    display: block;
-    transition: 0.3s;
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 15px;
+  color: #ffffff;
+  display: block;
+  transition: 0.3s;
 }
 
 .sidebar a:hover {
@@ -51,14 +48,14 @@
   font-size: 20px;
   cursor: pointer;
   background-color: transparent;
-  color: blue;
+  color: white;
   padding: 10px 15px;
   border: none;
 }
 
 .title-sidebar{
 	background-color: transparent;
-    color: blue;
+    color: white;
     padding-top: 10px;
 }
 
@@ -68,10 +65,7 @@
 }
 
 .openbtn:hover {
-  background-color: transparent;
-  border-color: blue;
-  border-style: solid;
-  border-width: 1px;
+  background-color: gray;
 }
 
 #main {
@@ -85,10 +79,7 @@
 }
 
 #mainNavInternet{
-  background-color: #fff;
-  border-width: 1px;
-  border-style: solid;
-  border-color: blue;
+	    background-color: black;
 }
 
 .logo-home{
