--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -66,8 +66,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background: rgb(0,75,230);
-  background: linear-gradient(220deg, rgba(0,75,230,0.1997253760862886) 27%, rgba(56,0,180,0.2221972861986482) 76%);
+  background-color: #fff;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -160,12 +159,12 @@ sup {
 }
 
 a {
-  color: #007bff;
+  color: #77E100;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #6610f2;
+  color: #e6b301;
   text-decoration: underline;
 }
 
@@ -214,7 +213,7 @@ table {
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  color: #fff;
+  color: #6c757d;
   text-align: left;
   caption-side: bottom;
 }
@@ -472,7 +471,7 @@ mark,
   color: #6c757d;
 }
 .blockquote-footer::before {
-  content: "— ";
+  content: "— ";
 }
 
 .img-fluid {
@@ -515,8 +514,8 @@ a > code {
 kbd {
   padding: 0.2rem 0.4rem;
   font-size: 87.5%;
-  color: #007bff;
-  background-color: #6610f2;
+  color: #fff;
+  background-color: #212529;
   border-radius: 0.2rem;
 }
 kbd kbd {
@@ -528,7 +527,7 @@ kbd kbd {
 pre {
   display: block;
   font-size: 87.5%;
-  color: #6610f2;
+  color: #212529;
 }
 pre code {
   font-size: inherit;
@@ -1656,21 +1655,20 @@ pre code {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #0068FF;
-  background: #fff;
+  color: #212529;
 }
 .table th,
 .table td {
   padding: 0.75rem;
   vertical-align: top;
-  border-top: 1px solid #6610f2;
+  border-top: 1px solid #dee2e6;
 }
 .table thead th {
   vertical-align: bottom;
-  border-bottom: 2px solid #6610f2;
+  border-bottom: 2px solid #dee2e6;
 }
 .table tbody + tbody {
-  border-top: 2px solid #6610f2;
+  border-top: 2px solid #dee2e6;
 }
 
 .table-sm th,
@@ -1679,11 +1677,11 @@ pre code {
 }
 
 .table-bordered {
-  border: 1px solid #0068FF;
+  border: 1px solid #dee2e6;
 }
 .table-bordered th,
 .table-bordered td {
-  border: 1px solid #0068FF;
+  border: 1px solid #dee2e6;
 }
 .table-bordered thead th,
 .table-bordered thead td {
@@ -1709,7 +1707,7 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: rgba(0, 104, 255, 0.5);
+  background-color: #fff2c7;
 }
 .table-primary th,
 .table-primary td,
@@ -1729,7 +1727,7 @@ pre code {
 .table-secondary,
 .table-secondary > th,
 .table-secondary > td {
-  background-color: rgba(0, 104, 255, 0.5);
+  background-color: #d6d8db;
 }
 .table-secondary th,
 .table-secondary td,
@@ -1769,13 +1767,13 @@ pre code {
 .table-info,
 .table-info > th,
 .table-info > td {
-  background-color: rgba(0, 104, 255, 0.5);
+  background-color: #bee5eb;
 }
 .table-info th,
 .table-info td,
 .table-info thead th,
 .table-info tbody + tbody {
-  border-color: rgba(0, 104, 255, 0.5);
+  border-color: #86cfda;
 }
 
 .table-hover .table-info:hover {
@@ -1887,7 +1885,7 @@ pre code {
 }
 .table .thead-light th {
   color: #495057;
-  background-color: rgba(0, 104, 255, 0.5);
+  background-color: #e9ecef;
   border-color: #dee2e6;
 }
 
@@ -2439,33 +2437,33 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-    color: blue;
-    background-color: #fff;
-    border-color: blue;
+  color: #fff;
+  background-color: #77E100;
+  border-color: #77E100;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: blue;
-  border-color: blue;
+  background-color: #fec810;
+  border-color: #fec503;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: blue;
-  border-color: blue;
-  box-shadow: 0 0 0 0.2rem blue;
+  background-color: #fec810;
+  border-color: #fec503;
+  box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
 }
 .btn-primary.disabled, .btn-primary:disabled {
-  color: #000;
-  background-color: #D8D8D8;
-  border-color: #D8D8D8;
+  color: #fff;
+  background-color: #77E100;
+  border-color: #77E100;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: blue;
-  border-color: blue;
+  background-color: #fec503;
+  border-color: #f3bd01;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem blue;
+  box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
 }
 
 .btn-secondary {
@@ -2529,25 +2527,25 @@ fieldset:disabled a.btn {
 }
 
 .btn-info {
-    color: #5D00FF;
-    background-color: #fff;
-    border-color: #5D00FF;
+  color: #fff;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
 }
 .btn-info:hover {
   color: #fff;
-  background-color: #5D00FF;
-  border-color: #5D00FF;
+  background-color: #138496;
+  border-color: #117a8b;
 }
 .btn-info:focus, .btn-info.focus {
   color: #fff;
-  background-color: #5D00FF;
-  border-color: #5D00FF;
-  box-shadow: 0 0 0 0.2rem #5D00FF;
+  background-color: #138496;
+  border-color: #117a8b;
+  box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
 }
 .btn-info.disabled, .btn-info:disabled {
-  color: #000;
-  background-color: #D8D8D8;
-  border-color: #D8D8D8;
+  color: #fff;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
 }
 .btn-info:not(:disabled):not(.disabled):active, .btn-info:not(:disabled):not(.disabled).active, .show > .btn-info.dropdown-toggle {
   color: #fff;
@@ -2621,12 +2619,12 @@ fieldset:disabled a.btn {
 .btn-light {
   color: #212529;
   background-color: #f8f9fa;
-  border-color: #212529;
+  border-color: #f8f9fa;
 }
 .btn-light:hover {
   color: #212529;
   background-color: #e2e6ea;
-  border-color: #212529;
+  border-color: #dae0e5;
 }
 .btn-light:focus, .btn-light.focus {
   color: #212529;
@@ -4375,14 +4373,10 @@ input[type=button].btn-block {
 }
 
 .card-header {
-    padding: 0.75rem 1.25rem;
-    margin-bottom: 0;
-    color: blue;
-    background: #E8F1FF;
-    border-color: blue;
-    border-style: solid;
-    border-width: 1px;
-    margin-top: 1re;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: rgba(0, 0, 0, 0.03);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 .card-header:first-child {
   border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
@@ -9780,7 +9774,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: blue !important;
+  color: #77E100 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -10050,20 +10044,10 @@ img::-moz-selection {
   border-radius: 100%;
 }
 
-.customNav{
-  background-color: #fff;
-  border-width: 1px;
-  border-style: solid;
-  border-color: blue;
-}
-
 #mainNav {
   padding-top: 1rem;
-  padding-bottom: 1rem;    
-  background-color: #fff;
-  border-width: 1px;
-  border-style: solid;
-  border-color: blue;
+  padding-bottom: 1rem;
+  background-color: #212529;
 }
 #mainNav .navbar-toggler {
   padding: 0.75rem;
@@ -10075,7 +10059,7 @@ img::-moz-selection {
   border: 0;
 }
 #mainNav .navbar-brand {
-  color: blue;
+  color: #77E100;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   letter-spacing: 0.0625em;
@@ -10087,17 +10071,18 @@ img::-moz-selection {
 #mainNav .navbar-nav .nav-item .nav-link {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 0.95rem;
-  color: blue;
+  color: #fff;
   letter-spacing: 0.0625em;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: blue;
+  color: #77E100;
 }
 
 @media (min-width: 992px) {
   #mainNav {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    border: none;
     transition: padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out;
   }
   #mainNav .navbar-brand {
@@ -10111,10 +10096,7 @@ img::-moz-selection {
   #mainNav.navbar-shrink {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    background-color: #fff;
-  border-width: 1px;
-  border-style: solid;
-  border-color: blue;
+    background-color: #212529;
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
