add feacture sell tickets

--- a/src/main/resources/templates/layouts/internt-layout.html
+++ b/src/main/resources/templates/layouts/internt-layout.html
@@ -8,7 +8,7 @@
 	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <meta name="description" content="" />
 <meta name="author" content="Dany Lasso" />
-<title th:text="'Electrodomésticos'"></title>
+<title th:text="'Grupo 7 - 2021'"></title>
 <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
 <!-- Font Awesome icons (free version)-->
 <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
@@ -80,7 +80,7 @@
 					</div>
 					<div class="col-sm-6">
 						<h4 class="title-sidebar"
-							th:text="${(titlePage != null)? titlePage : 'Comercializador Monster - Internos' }"></h4>
+							th:text="${(titlePage != null)? titlePage : 'Monster' }"></h4>
 					</div>
 					<div class="col-sm-3" sec:authorize="isAuthenticated()">
 						<ul class="navbar-nav text-uppercase ml-auto">
@@ -108,7 +108,7 @@
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-4 text-lg-left">Copyright ©
-					Comercializadora Grupo  7  - 2021</div>
+					Grupo  7  - 2021</div>
 				<div class="col-lg-4 my-3 my-lg-0">
 					<a class="btn btn-dark btn-social mx-2" href="#!"><i
 						class="fab fa-twitter"></i></a> <a
