--- a/src/main/resources/templates/store/products.html
+++ b/src/main/resources/templates/store/products.html
@@ -56,7 +56,9 @@
 					<td>
 						<button type="button" class="editar btn btn-primary">
 							<i class="far fa-edit"></i>
-						</button> <a class="btn btn-danger"
+						</button> 
+						
+					<a class="btn btn-danger"
 						th:href="@{/delete/}+${product.code_product}"
 						onclick="return confirm('Está seguro de eliminar la información del producto')">
 							<i class="fas fa-trash"></i>
